tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/string_bitwise_xor.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print("Hello" ^ "World")

